# fractal

./: .gitignore  .rules  ARCHITECTURE_PLAN.md  Cargo.toml  DEMO_CODE.md  README.md  Trunk.toml  agent.md  db.sqlite  dev_status.md  fractal.js  index.html  run_workbench.py  serve_refactor_ui.sh  sw.js  test_async_fix.md  test_backend_simple.py  test_integration.py  trades_export.csv
backend_server/: db.sqlite  requirements.txt  test_server.py
backend_server/app/: __init__.py  main.py  routes.py  schemas.py  services.py  storage.py
backend_server/app/core/: result.py
backend_server/backend_server/: run_server.py
portfolio_lib/: .env  README.md  analysis.ipynb  analysis.py  pyproject.toml  run_tests.py  setup_env.py  test_dependency_injection.py  test_phase1.py  tmp_chart_probe.py  tmp_chart_probe2.py  tmp_tool_probe.py
portfolio_lib/portfolio_lib/: __init__.py  config.py
portfolio_lib/portfolio_lib/models/: __init__.py  market_data.py  portfolio.py  strategy.py
portfolio_lib/portfolio_lib/services/: __init__.py
portfolio_lib/portfolio_lib/services/backtesting/: __init__.py  backtester.py
portfolio_lib/portfolio_lib/services/data/: __init__.py  alphavantage.py  base.py  yfinance.py
portfolio_lib/portfolio_lib/services/strategy/: __init__.py  base.py  bollinger.py  ml_attractiveness.py  momentum.py
portfolio_lib/portfolio_lib/services/strategy/custom/: __init__.py  mean_reversion_strategy.py
portfolio_lib/portfolio_lib/ui/: __init__.py  agent_tools.py  pygui_workbench.py  strategy_workbench.py
portfolio_lib/portfolio_lib/ui/.workbench_store/: session-bollingeradded-20250812-103448.json  session-improv-20250811-185857.json
portfolio_lib/tests/: test_data_providers.py  test_portfolio.py  test_rebalance_diagnostics.py
refactor_ui/: Cargo.toml  FRONTEND_REFACTOR_PLAN.md  README.md  Trunk.toml  index.html
refactor_ui/dist_yew/: index.html  refactor_ui-7f1db57ea1f4fb17.js  refactor_ui-7f1db57ea1f4fb17_bg.wasm
refactor_ui/src/: charts.rs  lib.rs  strategy_workbench.rs
src/: app.rs  lib.rs  main.rs
src/api/: mod.rs
src/components/: manager.rs  mod.rs  status.rs
src/portfolio/: indicators.rs  mod.rs  types.rs
src/state/: mod.rs
src/ui/: mod.rs
src/ui/layouts/: grid_layout.rs  mod.rs
src/ui/widgets/: collapsible_panel.rs  hover_tooltip.rs  metric_card.rs  mod.rs  scrollable_table.rs  window.rs
src/views/: backtest.rs  candles.rs  charts.rs  dashboard.rs  mod.rs  strategy_workbench.rs  tables.rs
tests/: integration_tests.rs
