[package]
name = "refactor_ui"
version = "0.1.0"
edition = "2021"

# Empty workspace table to make this crate independent
[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"], default-features = false }
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlElement", "console", "HtmlCanvasElement", "CanvasRenderingContext2d"] }
js-sys = "0.3"
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
console_error_panic_hook = "0.1"
gloo-timers = { version = "0.3", features = ["futures"] }
